--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,7 @@ services:
       - 8000:8000
     depends_on:
       - django_redis
+      - django_db
 
   # Redis (First, run django_redis and the run django)
   django_redis:
@@ -41,4 +42,30 @@ services:
     ports:
       - 80:80
     depends_on:
+      - django_db
+
+  # Celery
+  celery_worker:
+    container_name: blog_celery_worker
+    build: .
+    command: celery -A core worker --loglevel=info
+    volumes:
+      - .:/app
+    ports:
+      - 8001:8001
+    depends_on:
+      - django_redis
+      - django_db
+
+  # Celery Beat
+  celery_beat: 
+    container_name: blog_celery_beat
+    build: .
+    command: celery -A core beat -l INFO --scheduler django_celery_beat.schedulers:DatabaseScheduler
+    volumes:
+      - .:/app
+    ports:
+      - 8002:8002
+    depends_on:
+      - django_redis
       - django_db
