--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Django==5.2.1
 djangorestframework==3.16.0
+djangorestframework-api-response==0.1.0
 django-redis==5.4.0
 django-environ==0.9.0
 django-ckeditor==6.7.3
